--- a/laravel-chat/.env
+++ b/laravel-chat/.env
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravelchat
 DB_USERNAME=root
-DB_PASSWORD=12345
+DB_PASSWORD=
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
